--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^8.0.0",
